tests/snapshots/test_runner__tests__compiler__typecheck__or_pattern_missing_binding_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
type Foo = #a(x: String, y: String) | #bala

entry
  {
    \#a (x, y)  | #bala -> #true
            //    ^^^^^ Error: missing binding `x`
  } (#bala)

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/or_pattern_missing_binding_1.kk:6:19
  │
6 │     \#a (x, y)  | #bala -> #true
  │                   ^^^^^ Missing bindings
  │
  = Every pattern in an OR pattern must have the same set of bindings, however this pattern is missing the following binding(s) which are found in preceding pattern(s):

        x
        y
